clean stage 1
