# dto/collections/collections_response.go
@@ -1,0 +1,7 @@
+package collections
+
+import "ta13-svc/entity"
+
+type ResponseGetCollections struct {
+	Collections []entity.Collection `json:"collections"`
+}
