# entity/collection.go
@@ -1,0 +1,6 @@
+package entity
+
+type Collection struct {
+	Id   string
+	Name string
+}
